# dxr-path-tracing

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/hello-triangle/: CMakeLists.txt  main.cc  shader_table.h  util.h
src/hello-triangle/shaders/: raytrace.hlsl
src/rtrt/: CMakeLists.txt  acceleration_structure.cc  acceleration_structure.h  adapter_selector.cc  adapter_selector.h  application.cc  application.h  buffer.cc  buffer.h  camera.cc  camera.h  descriptor_heap.cc  descriptor_heap.h  device.cc  device.h  imgui_layer.cc  imgui_layer.h  main.cc  model.cc  model.h  pch.cpp  pch.pch  readback_buffer.cc  readback_buffer.h  root_signatures.cc  root_signatures.h  shader_table.cc  shader_table.h  texture_loader.cc  texture_loader.h  upload_buffer.cc  upload_buffer.h  util.h
src/rtrt/imgui/: imconfig.h  imgui.cc  imgui.h  imgui_demo.cc  imgui_draw.cc  imgui_internal.h
src/rtrt/shaders/: averager.cs.hlsl  pathtrace.rt.hlsl  picking.rt.hlsl  raytrace.rt.hlsl  shading_data.hlsli  util.hlsli
src/rtrt/shared/: raytracing_data.h
